--- a/generate.html
+++ b/generate.html
@@ -2,6 +2,8 @@
     <head>
         <title>Generate - ChordGen</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"> 
+        <script src="./lib/audiosynth.js"></script>
+        <script src="./lib/jquery.min.js"></script>
         <script src="./generate.js"></script>
         <link rel="stylesheet" href="./style.css" />
     </head>
