--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>csis1430-final</title>
+        <title>Home - ChordGen</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"> 
         <link rel="stylesheet" href="./style.css" />
     </head>
@@ -11,10 +11,14 @@
                 <a href="./index.html" class="active">Home</a>
                 <a href="./generate.html">Generate</a>
                 <a href="./how-it-works.html">How it works</a>
-                <a href="./about.html">About</a>
             </nav>
         </div>
         <section>
+            <h1 class="landing-header">ChordGen</h1>
         </section>
+        <footer>
+            <p>Created by <a href="http://chrisreading.net">Chris Reading</a></p>
+            <p>Check out the code on <a href="http://github.com/nomad23541">github</a></p>
+        </footer>
     </body>
 </html>
