--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         </div>
         <section>
             <h1 class="landing-header">ChordGen</h1>
+            <p>ChordGen is a free-to-use chord progression generator.</p>
+            <p>This project mostly served as a proof-of-concept for me, figuring out how to play MIDI in the browser was a wonderful experience to learn.</p>
+            <br>
+            <p><a href="./generate.html">Click here</a> to start generating!</p>
         </section>
         <footer>
             <p>Created by <a href="http://chrisreading.net">Chris Reading</a></p>
